--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,77 +1,71 @@
-################
-### PROGRAMS ###
-################
+###################
+### MY PROGRAMS ###
+###################
 
 # Set programs that you use
 $terminal = kitty
 $fileManager = ~/scripts/open_yazi.sh
-$menu = rofi -show drun
-$browser = zen-browser
 
-################
-### KEYBINDS ###
-################
+$menu = rofi -show drun
+$browser = brave
+####################
+### KEYBINDINGSS ###
+####################
 
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Close Active Apps
-bind = $mainMod, Q, killactive,
-
-# Window Keybinds
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, F, fullscreen
-bind = $mainMod, J, togglesplit,
-
-# Open App Launcher
-bind = $mainMod, SPACE, exec, $menu
-
-# Terminal Emulator
-bind = $mainMod, RETURN, exec, $terminal tmux
-bind = $mainMod SHIFT, RETURN, exec, [float; size 700 600] $terminal tmux 
-
-# Open Yazi
+bind = $mainMod, RETURN, exec, $terminal 
+bind = $mainMod SHIFT, RETURN, exec, [float; size 700 600] $terminal 
+bind = $mainMod, C, killactive,
 bind = $mainMod, M, exec, sh ~/scripts/open_yazi.sh
-bind = $mainMod SHIFT, M, exec, [float; size 525 260] sh ~/scripts/open_yazi.sh 
-
-# Open Power Menu
+bind = $mainMod SHIFT, Y, exec, [float; size 525 260] sh ~/scripts/open_yazi.sh 
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, exec, sh ~/scripts/power_management.sh
-
-# Open Browser
+bind = $mainMod, J, togglesplit,
+bind = $mainMod, R, exec, sh ~/scripts/launch.sh
+bind = $mainMod, A, exec, sh ~/scripts/hyprpaper_reload.sh
 bind = $mainMod, B, exec, $browser
-
-# EWW Stuff
+bind = $mainMod, F, fullscreen
 bind = $mainMod SHIFT, W, exec, sh ~/scripts/select_wallpaper.sh 
 bind = $mainMod, H, exec, sh ~/scripts/launch_widgets.sh
-bind = $mainMod, R, exec, sh ~/scripts/launch.sh
+bind = $mainMod, E, exec,thunar
+bind = $mainMod, M, exec, systemctl poweroff 
+bind = $mainMod SHIFT, S, exec, systemctl suspend
+bind = $mainMod, O, exec , obsidian
+bind = $mainMod, D, exec , sh ~/scripts/neverstop.sh
+#workspace 
+bind = $mainMod , W, exec, sh ~/scripts/study_mode.sh
 
-# Reload Hyprpaper
-bind = $mainMod, A, exec, sh ~/scripts/hyprpaper_reload.sh
-
+bind = ,F1, exec, sh ~/scripts/cs50py.sh
+bind = ,F3, exec, sh ~/scripts/mit_maths.sh
+bind = ,F2, exec, sh ~/scripts/bca_study.sh
+bind = ,F10, exec, sh ~/scripts/study_mode.sh
 # Screen Shot
-bind = $mainMod, PRINT, exec, hyprshot -m output
-bind = $mainMod SHIFT, PRINT, exec, hyprshot -m region
+bind = , F11, exec, hyprshot -m window 
+bind = , F12, exec, hyprshot -m region
 
 # Window focus
 bind = ALT, h, movefocus, l
-bind = ALT, i, movefocus, r
+bind = ALT, l, movefocus, r
 bind = ALT, k, movefocus, u
 bind = ALT, j, movefocus, d
 
 # Move Window
 bind = ALT SHIFT, h, movewindow, l
-bind = ALT SHIFT, i, movewindow, r
+bind = ALT SHIFT, l, movewindow, r
 bind = ALT SHIFT, k, movewindow, u
 bind = ALT SHIFT, j, movewindow, d 
 
 # Resize Window
 bind = $mainMod ALT, h, resizeactive, -40 0
-bind = $mainMod ALT, i, resizeactive, 40 0
+bind = $mainMod ALT, l, resizeactive, 40 0
 bind = $mainMod ALT, k, resizeactive, 0 -40
 bind = $mainMod ALT, j, resizeactive, 0 40
 
 # Move Floating Window
 binde = $mainMod CTRL, h, moveactive, -40 0
-binde = $mainMod CTRL, i, moveactive, 40 0
+binde = $mainMod CTRL, l, moveactive, 40 0
 binde = $mainMod CTRL, k, moveactive, 0 -40
 binde = $mainMod CTRL, j, moveactive, 0 40
 
@@ -108,6 +102,16 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+# Brightness Up (Mod + =)
+bind = $mainMod, equal, exec, ~/.local/bin/mon_up
+
+# Brightness Down (Mod + -)
+bind = $mainMod, minus, exec, ~/.local/bin/mon_down
+
+
+# Example special workspace (scratchpad)
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -116,3 +120,4 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
